--- a/app/views/runners/_show_runner_partial.html.erb
+++ b/app/views/runners/_show_runner_partial.html.erb
@@ -3,13 +3,19 @@
   <td><%= runner.name %></td>
   <td><%= runner.short %></td>
   <td><%= runner.long %></td>
+</tr>
+<tr>
+  <td></td>
+  <td>
+    <%= form_tag(runner, method: "patch") do %>
+        <%= hidden_field_tag("runner[short]", "#{(runner.short+1)}") %>
+        <%= submit_tag("Increment Short Run Count") %>
+    <% end %>
+  </td>
   <td>
     <%= form_tag(runner, method: "patch") do %>
         <%= hidden_field_tag("runner[long]", "#{(runner.long+1)}") %>
         <%= submit_tag("Increment Long Run Count") %>
     <% end %>
   </td>
-  <td><%= link_to 'Show', runner %></td>
-  <td><%= link_to 'Edit', edit_runner_path(runner) %></td>
-  <td><%= link_to 'Destroy', runner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
